--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ main p {
     font-size: 1.25rem; /* Ajuster la taille selon le besoin */
     margin-top: 1rem; /* Ajoute de l'espace au-dessus du paragraphe */
     color: #005a5a; /* Couleur bleue claire pour le texte */
-}
+} 
 
 main img {
     max-width: 100%; /* Rend l'image responsive */
@@ -167,11 +167,97 @@ main img {
 
 }
 
-/* Footer */
+Footer 
 footer {
     background-color: #333;
     color: white;
     text-align: center;
     padding: 20px 0px;
     margin: 0px;
+} 
+
+
+/*-----------------------------rejoignez-nous  styles---------------------------*/
+.body{
+  margin: 0%;
+  padding: 0%;
+  width: 100%;
+  background-image: url(""); 
+  float: left;
+  display: flex;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
+  /* position: absolute;
+  background-position:center; */
+  
+}
+
+.formulaire-joins{
+  background-color: antiquewhite;
+  padding: 20px;
+  width: 40%;
+  height: 100%;
+  flex-wrap: wrap;
+}
+.formulaire-joins .ligne-seperation{
+  width: 100%;
+  height: 1.5px;
+  background-color: #333;
+  flex-wrap: wrap;
+  
+}
+.formulaire-joins .content-formulaire .information {
+  width: 50%;
+  
+}
+.formulaire-joins .content-formulaire .monimage{
+margin-left: 50px;
+ margin-top: 10px;
+ height: 100%;
+ background-size: cover; 
+ background-position:center;
+ float: left;
+ width: 35%;
+ margin-left: 10%;
+
+}
+.content-formulaire{
+  display: flex; 
+  flex-wrap: wrap;
+  margin-bottom: 10px;
+ 
+
+}
+#id-info{
+  margin-top: 10px;
+  position: relative;
+}
+.content-formulaire .information #id-info input{
+  padding: 10px 3px 10px 30px;
+  border-radius: 5px;
+  margin-left: 10px;
+}
+.content-formulaire .information #id-info i{
+  position: absolute;
+  left: 20px;
+  top: 30px;
+  padding: 0px 0px ;
+  
+
+}
+.cote2{
+  margin: 0%;
+  padding: 0%;
+  width: 30%;
+ 
+  float: left;
+  background-color: aqua;
+  background-position:center;
+}
+section div img{
+  width: 100%;
+  height:650px;
+  flex-wrap: wrap;
+  background-color: rebeccapurple;
+  background-position:center;
 }
