--- a/style.css
+++ b/style.css
@@ -179,54 +179,73 @@ footer {
 
 /*-----------------------------rejoignez-nous  styles---------------------------*/
 .body{
-  margin: 0%;
-  padding: 0%;
+    padding: 10px;
   width: 100%;
   background-image: url(""); 
   float: left;
-  display: flex;
+  
   font-family: 'Roboto', sans-serif;
   font-weight: bold;
-  /* position: absolute;
-  background-position:center; */
+  color:black;
   
 }
 
 .formulaire-joins{
-  background-color: antiquewhite;
+ background-color:rgb(244, 238, 238);
   padding: 20px;
-  width: 40%;
-  height: 100%;
   flex-wrap: wrap;
+  height: 600px;
+  display: flex;
 }
-.formulaire-joins .ligne-seperation{
+.ligne-seperation{
   width: 100%;
   height: 1.5px;
-  background-color: #333;
+  background-color:rgb(244, 11, 11);
   flex-wrap: wrap;
   
 }
-.formulaire-joins .content-formulaire .information {
-  width: 50%;
-  
-}
+
 .formulaire-joins .content-formulaire .monimage{
-margin-left: 50px;
- margin-top: 10px;
- height: 100%;
  background-size: cover; 
  background-position:center;
  float: left;
- width: 35%;
- margin-left: 10%;
+ width: 15%;
 
+
+}
+.information{
+    width: 50%; 
 }
 .content-formulaire{
   display: flex; 
   flex-wrap: wrap;
   margin-bottom: 10px;
- 
 
+}
+.rejoins-image{
+    width: 30%;
+    margin-left:10px ;
+    padding-left: 20px;
+   color: #000;
+
+
+}
+.rejoins-image h2{
+    padding-top: 10px;
+    margin-top: 20px;
+    text-align: center;
+}
+.rejoins-image i{
+  color: #000;
+   margin: 50px 20px;
+   padding-left: 10px;
+   
+}
+.nosAddresses{
+    width: 80%;
+    height: 400px;
+    background-color:white;
+    border-radius: 2em;
 }
 #id-info{
   margin-top: 10px;
@@ -239,25 +258,85 @@ margin-left: 50px;
 }
 .content-formulaire .information #id-info i{
   position: absolute;
-  left: 20px;
-  top: 30px;
+  left: 108px;
+  top: 18px;
   padding: 0px 0px ;
+  color: #000;
+
   
+}
+
+
+ 
+/*------------------/ Stype pour notre histoire--------------------------------*/
+@import url('https://fonts.googleapis.com/css2? family= Great+Vibes & family= Raleway:ital,wght@1,200 & display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100;1,700&display=swap');
+body .separtion-histoire{
+    width: 100%;
+    height: 1px;
+    background-color: red;
+    color: #000;
+    font-size: bold;
+}
+body main .histoire-part1
+{
+    display: flex;
+}
+.clsHistoire-partie-gauche {
+    background-image: url("imageHistoire/hamburger.jpg");
+   padding: 5em;
+    margin: 5em;
+   height: 500px;
+   background-color: #333;
+  border-radius: 1.5em;
+    background-size: cover; 
+    background-position:center;
+    width: 30%; 
+   
 
 }
-.cote2{
-  margin: 0%;
-  padding: 0%;
-  width: 30%;
- 
-  float: left;
-  background-color: aqua;
-  background-position:center;
+.cls-partie-droite{
+    margin-left: 2em;
+    width: 70%;
+    height: 600px;
 }
-section div img{
-  width: 100%;
-  height:650px;
-  flex-wrap: wrap;
-  background-color: rebeccapurple;
-  background-position:center;
+.mesTextes{
+    margin: 2em 10em;
+    background-position: center;
+   
+
+}
+.retour-au-menu{
+   border-color: red;
+   background-color: white;
+   border-radius: 1.5em;
+   padding: 1em;
+   font-weight: bold;
+   font-size: 15px;
+}
+.histoire-partie2{
+    display: flex;
+    margin: 2em;
+    border-radius: 1.5em;
+    padding: 10px 100px;
+    margin: 30px 10px;
+   
+}
+.mesAutres-pages{
+    margin: 10px;
+    border-radius: 1.5em;
+    margin-left: 50px;
+    width: 20%;
+    height: 100px;
+    font-size: 20px;
+    background-color:red;
+}
+.histoire-partie2 .mesAutres-pages button{
+    width: 99%;
+    margin-top: 5px;
+    height: 95px;
+    border-radius: 2em;
+    border:0px;
+    border-color: red;
+    font-weight: 1px;
 }
