--- a/css/style.css
+++ b/css/style.css
@@ -84,25 +84,28 @@ main img {
     margin: 1rem 0; /* Ajoute de l'espace au-dessus et en dessous de l'image */
 }
 /*Style pour le menu*/
+/*Style pour le menu*/
 .titre_menu{
     font-size: 9em;
     text-align: center;
     padding: 0.4em;
-    margin-left: 2em;
-    margin-right: 2em;
     margin-bottom: 0;
+}
+
+.img_menu{
+    background-color: #333;
+    max-width: 40%;
+    padding: 1em;
 }
 
 .table_menu{
     width: 80%;
-    margin-left: auto;
-    margin-right: auto;
     background-color: #f0f0f0;
     padding-bottom: 6em;
 }
 
 .section_menu{
-    text-align: center;
+    padding: auto;
     font-size: 3em;
     padding-bottom: 1em;
     padding-top: 1em;
@@ -111,18 +114,18 @@ main img {
 .option_menu{
     font-family:'Trebuchet MS', sans-serif;
     font-size: 1.5em;
-    padding-left: 7%;
+    padding-left: 0;
 }
 
 .description_menu{
-    padding-left: 8%;
+    padding-left: 0%;
     font-family:'Segoe UI', sans-serif;
     padding-bottom: 1.5em;
 }
 
 .prix_menu {
     text-align: right;
-    padding-right: 10%; 
+    padding-right: 0%; 
     color: #000; 
     font-family: 'Segoe UI', sans-serif; 
 }
